--- a/src/FluffySpoon.Testing.Autofake.NSubstitute/FluffySpoon.Testing.Autofake.NSubstitute.csproj
+++ b/src/FluffySpoon.Testing.Autofake.NSubstitute/FluffySpoon.Testing.Autofake.NSubstitute.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="nsubstitute" Version="2.0.2" />
+    <PackageReference Include="NSubstitute" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
