--- a/src/FluffySpoon.Testing.Autofake.MicrosoftDependencyInjection/FluffySpoon.Testing.Autofake.MicrosoftDependencyInjection.csproj
+++ b/src/FluffySpoon.Testing.Autofake.MicrosoftDependencyInjection/FluffySpoon.Testing.Autofake.MicrosoftDependencyInjection.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.6.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
