--- a/src/FluffySpoon.Testing.Autofake.Tests/FluffySpoon.Testing.Autofake.Tests.csproj
+++ b/src/FluffySpoon.Testing.Autofake.Tests/FluffySpoon.Testing.Autofake.Tests.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FluffySpoon.Testing.Autofake.Autofac\FluffySpoon.Testing.Autofake.Autofac.csproj" />
     <ProjectReference Include="..\FluffySpoon.Testing.Autofake.MicrosoftDependencyInjection\FluffySpoon.Testing.Autofake.MicrosoftDependencyInjection.csproj" />
+    <ProjectReference Include="..\FluffySpoon.Testing.Autofake.Moq\FluffySpoon.Testing.Autofake.Moq.csproj" />
     <ProjectReference Include="..\FluffySpoon.Testing.Autofake.NSubstitute\FluffySpoon.Testing.Autofake.NSubstitute.csproj" />
     <ProjectReference Include="..\FluffySpoon.Testing.Autofake\FluffySpoon.Testing.Autofake.csproj" />
   </ItemGroup>
