--- a/src/FluffySpoon.Testing.Autofake.Autofac/FluffySpoon.Testing.Autofake.Autofac.csproj
+++ b/src/FluffySpoon.Testing.Autofake.Autofac/FluffySpoon.Testing.Autofake.Autofac.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.6.0" />
+    <PackageReference Include="Autofac" Version="6.1.0" />
   </ItemGroup>
 
   <ItemGroup>
