--- a/src/FluffySpoon.Testing.Autofake.FakeItEasy/FluffySpoon.Testing.Autofake.FakeItEasy.csproj
+++ b/src/FluffySpoon.Testing.Autofake.FakeItEasy/FluffySpoon.Testing.Autofake.FakeItEasy.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="fakeiteasy" Version="5.5.0" />
+    <PackageReference Include="fakeiteasy" Version="6.2.1" />
   </ItemGroup>
 
   <ItemGroup>
