--- a/src/FluffySpoon.Testing.Autofake.NSubstitute/FluffySpoon.Testing.Autofake.NSubstitute.csproj
+++ b/src/FluffySpoon.Testing.Autofake.NSubstitute/FluffySpoon.Testing.Autofake.NSubstitute.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NSubstitute" Version="2.0.3" />
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
   </ItemGroup>
 
   <ItemGroup>
